--- a/ITU-EOP/Views/Statistics.xaml
+++ b/ITU-EOP/Views/Statistics.xaml
@@ -1,4 +1,8 @@
-﻿<UserControl x:Class="ITU_EOP.Statistics"
+﻿<!--ITU projekt - TimeTracker 
+    zobrazeni statistik
+    Autor: Adam Grunwald, xgrunw00-->
+    
+    <UserControl x:Class="ITU_EOP.Statistics"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +11,7 @@
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
+        <!--Nastaveni pozadi a rozmeru-->
     <Grid Background="Gray">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -23,6 +28,8 @@
         <TextBlock HorizontalAlignment="Center" TextWrapping="NoWrap" Text="Aplikace" VerticalAlignment="Center" Grid.Column="0" FontSize="15"/>
         <TextBlock HorizontalAlignment="Center" TextWrapping="NoWrap" Text="Kategorie" VerticalAlignment="Center" Grid.Column="1" FontSize="15"/>
 
+        <!--Prvni graf-->
+        
         <Grid Grid.Row="1" MaxWidth="600">
             <lvc:PieChart Name="applicationsChart" Series="{Binding appsCollection}" Margin="20,20,10,20" LegendLocation="Right" MaxHeight="400" InnerRadius="0" DisableAnimations="False">
                 <lvc:PieChart.ChartLegend>
@@ -33,6 +40,8 @@
                 </lvc:PieChart.DataTooltip>
             </lvc:PieChart>
         </Grid>
+        
+        <!--Druhy graf-->
 
         <Grid Grid.Row="1" Grid.Column="1" MaxWidth="600">
             <lvc:PieChart Name="categoriesChart" Series="{Binding categoriesCollection}" Margin="10,20,20,20" MaxHeight="400" LegendLocation="Right" InnerRadius="0" DisableAnimations="False">
