--- a/ITU-EOP/MainWindow.xaml
+++ b/ITU-EOP/MainWindow.xaml
@@ -1,4 +1,9 @@
-﻿<Window x:Class="ITU_EOP.MainWindow"
+﻿<!--
+ITU projekt - TimeTracker
+Zobrazení hlavního okna aplikace.
+Autor: Dominik Nejedlý, xnejed09
+-->
+<Window x:Class="ITU_EOP.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,6 +15,9 @@
         mc:Ignorable="d"
         Title="EOP" Height="660" Width="1000" MinWidth="1000" MinHeight="660" Icon="/Icons/logo.png">
 
+    <!--
+    Základní rozdělení okna a definice jednotlivých řádků.
+    -->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -17,27 +25,53 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-
+        <!--
+        Rozložení a formátování zobrazení aktuálního data a času při zobrazení cílů.
+        Pokud je přepnuto na zobrazení cílů, tato sada je odkryta.
+        -->
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,30">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,20">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,20" Height="50">
+                <!--
+                Binding na Today zajišťuje zobrazení aktuálního dne.
+                -->
                 <TextBlock Name="dateToday" Text="{Binding Today}" TextAlignment="Center" FontSize="24" Background="White" Foreground="#FF615959" Width="120" VerticalAlignment="Center"/>
             </StackPanel>
+            <!--
+            Binding na TodayWholeTime zajišťuje zobrazení aktuálního celkového času.
+            -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Name="todayTimeSum" Text="{Binding TodayWholeTime, StringFormat=Celkový čas: {0:hh\\:mm\\:ss}}" FontSize="24" Foreground="#FF424242"/>
             </StackPanel>
         </StackPanel>
 
+        <!--
+        Blok, ve kterém je přepínána zobrazovaná plocha (UserControl).
+        O tom, jaké view bude zobrazeno rozhoduje binding na CurrentViewModel,
+        tedy zdali budou jednotlivé záznamy, cíle, nebo statistiky.
+        -->
         <ContentControl Grid.Row="2" Content="{Binding CurrentViewModel}" Margin="60,10,10,10"/>
 
-
+        <!--
+        Zobrazení tlačítek pro listování, aktuálního data a celkového času při zobrazování záznamů případně statistik.
+        Pokud je přepnuto na zobrazení cílů, tato sada mizí (binding na StackVisibility).
+        -->
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" Visibility="{Binding StackVisibility}" Background="White" VerticalAlignment="Center" Margin="0,15,0,30">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,20">
+                <!--
+                Binding na obslužný příkaz Prev posune aktuální časový interval na předcházející.
+                -->
                 <Button x:Name="prevButton" Command="{Binding Prev}"  CommandParameter="prev" BorderBrush="Transparent" Background="Transparent" Margin="0,0,20,0" Height="50" Width="50">
                     <StackPanel>
                         <Image Source="/Icons/prev.png"/>
                     </StackPanel>
                 </Button>
+                <!--
+                Binding na DateSting zajišťuje zobrazení vybraného data, či jiného časového intervalu.
+                -->
                 <TextBlock Name="currentDate" Text="{Binding DateString}" TextAlignment="Center" FontSize="24" Foreground="#FF615959" Width="120" VerticalAlignment="Center"/>
+                <!--
+                Binding na obslužný příkaz Next posune aktuální časový interval na další.
+                -->
                 <Button Name="nextButton" Command="{Binding Next}" CommandParameter="next" BorderBrush="Transparent" Background="Transparent" Margin="20,0,0,0" Height="50" Width="50">
                     <StackPanel>
                         <Image Source="/Icons/next.png"/>
@@ -49,12 +83,21 @@
             </StackPanel>
         </StackPanel>
 
+        <!--
+        Použití a naformátování HamburgerMenu a binding jeho tlačítek na obslužné příkazy.
+        Tyhle příkazy vyvolájí změnu a v ContentControl se poté zobrazí správný UserControl modul.
+        -->
         <HamburgerMenu:HamburgerMenu Background="LightGray" MenuIconColor="White" SelectionIndicatorColor="White" MenuItemForeground="White" HorizontalAlignment="Left" Grid.RowSpan="4">
             <HamburgerMenu:HamburgerMenuItem Icon="/Icons/timer_icon.png" Text="Časovač" SelectionCommand="{Binding Timer}"/>
             <HamburgerMenu:HamburgerMenuItem Icon="/Icons/target.png" Text="Cíle" SelectionCommand="{Binding Targets}"/>
             <HamburgerMenu:HamburgerMenuItem Icon="/Icons/chart_icon.png" Text="Statistiky" SelectionCommand="{Binding Statistics}"/>
         </HamburgerMenu:HamburgerMenu>
 
+        <!--
+        Prostřední část hlavní lišty v 1. řádku gridu, tedy tlačítka Dnes, Den, Měsíc, Rok a jejich binding na obsulžné příkazy.
+        Pokud je přepnuto na zobrazení cílů, tato sada mizí (binding na StackVisibility).
+        Přepínání mezi časovými intervali a aktuálním dnem je řízeno bindingem na obslužný příkaz switchStateCommand u každého tlačítka.
+        -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Visibility="{Binding StackVisibility}">
             <Button Content="Dnes" Width="75" Command="{Binding switchStateCommand}" CommandParameter="Today" Margin="0,0,10,0" Height="40"/>
             <Button Content="Den" Width="75" Command="{Binding switchStateCommand}" CommandParameter="Day" Margin="0,0,10,0" Height="40"/>
@@ -62,6 +105,14 @@
             <Button Content="Rok" Width="75" Command="{Binding switchStateCommand}" CommandParameter="Year" Height="40"/>
         </StackPanel>
 
+        <!--
+        Pravá část hlavní lišty, tedy tlačítko kalendáře, notifikací a pozastavení aplikace.
+        Pokud je přepnuto na zobrazení cílů, tlačítko kalendáře mizí (binding na StackVisibility).
+        Při stisku tlačítka notifikací, se přepne jeho vzhled pomocí bindingu na NotificationImage
+        a analogicky se to děje stlačítkem na pozastavení aplikace (binding na PlayPauseImg).
+        Zapnutí a vypnutí upozorňujících notifikací je řízeno bindingem na obslužný příkaz NotificationCommand
+        a pozastavení aplikace je řízeno bindingem na příkaz PauseTimer.
+        -->    
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Orientation="Horizontal" Margin="0,0,25,0">
             <Button x:Name="calendarButton" Visibility="{Binding StackVisibility}" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Center" Width="40" Height="40" Background="Transparent" Click="calendarButton_Click">
                 <StackPanel>
@@ -80,6 +131,11 @@
             </Button>
         </StackPanel>
 
+        <!--
+        Kalendář, jehož zobrazení je vyvoláno kliknutím na tlačítko kalendář.
+        Pokud kursor opustí jeho plochu, kalendář zmizí.
+        Není  ovládán přes binding a v Codebehind jsou pro něj obslužné funkce.
+        -->
         <Calendar Name="calendar" HorizontalAlignment="Right" VerticalAlignment="center" Visibility="Hidden" Grid.RowSpan="2" MouseLeave="calendar_MouseLeave" SelectedDatesChanged="calendar_SelectedDatesChanged" Margin="0,10,106,42">
         </Calendar>
 
