--- a/ITU-EOP/Views/ApplicationList.xaml
+++ b/ITU-EOP/Views/ApplicationList.xaml
@@ -1,4 +1,9 @@
-﻿<UserControl x:Class="ITU_EOP.ApplicationList"
+﻿<!--
+ITU projekt - TimeTracker
+Zobrazení seznamu záznamů při zvolené možnosti časovač v hlavním okně.
+Autor: Dominik Nejedlý, xnejed09
+-->
+<UserControl x:Class="ITU_EOP.ApplicationList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,8 +13,14 @@
              d:DesignHeight="200" d:DesignWidth="400">
 
     <UserControl.Resources>
+        <!--
+        Zajišťuje předání více zdrojů při stisku tlačítka.
+        -->
         <local:ArrayMultiValueConverter x:Key="ArrayMultiValueConverter"/>
 
+        <!--
+        Nastavení stylů pro zobrazování hlaviček v DataGridu.
+        -->
         <Style x:Key="CenterGridHeaderStyle" TargetType="DataGridColumnHeader">
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="Background" Value="LightGray"/>
@@ -28,6 +39,9 @@
             <Setter Property="FontSize" Value="15"/>
             <Setter Property="Height" Value="50"/>
         </Style>
+        <!--
+        Nastavení stulů pro zobrazování buněk v DataGridu.
+        -->
         <Style x:Key="DataGridCellCenter" TargetType="DataGridCell">
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -41,17 +55,35 @@
         </Style>
     </UserControl.Resources>
 
-
+    <!--
+    Definice DataGridu
+    Je na něj navázán obsrvable collection Applications.
+    DataGrid je využíván zejména proto, že se s ním jednodušeji dynamicky pracuje.
+    Umožňuje jednoduše přidávat a mazat záznamy.
+    Zpracovává sám o sobě formulářovou strukturu, dá se bindivat na observable collection, řadit dle hodnot ve sloupcích atd.
+    -->
     <DataGrid Name="applicationGrid" RowHeaderWidth="0" ItemsSource="{Binding Applications, UpdateSourceTrigger=PropertyChanged}" RowHeight="40" IsReadOnly="True" AutoGenerateColumns="False" BorderThickness="0" Background="Gray" RowBackground="#FF9E9E9E" GridLinesVisibility="None" AlternatingRowBackground="#FF898989" SelectionUnit="Cell" SelectionMode="Single">
 
+        <!--
+        Definice sloupců
+        -->
         <DataGrid.Columns>
 
+            <!--
+            První sloupec s hlavičkou Aplikace je navázán bindigem na name a zobrazuje tak jméno aplikace.
+            -->
             <DataGridTextColumn Header=" Aplikace" Width="*" Binding="{Binding name}" HeaderStyle="{StaticResource LeftGridHeaderStyle}" CellStyle="{StaticResource DataGridCellVerCenter}" FontSize="13"/>
 
+            <!--
+            Druhý sloupec s hlavičkou Kategorie obsahuje sadu tlačítek, mezi kterými uživatel volí kategorii aplikace.
+            -->
             <DataGridTemplateColumn Header="Kategorie"  Width="*" HeaderStyle="{StaticResource CenterGridHeaderStyle}" CellStyle="{StaticResource DataGridCellCenter}">
                 <DataGridTemplateColumn.CellTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" >
+                            <!--
+                            Vytvoření tlačítka pro kategorii práce.
+                            -->
                             <Button Name="Work" Command="{Binding DataContext.setCategory,       
                                 RelativeSource= {RelativeSource FindAncestor,
                                 AncestorType={x:Type DataGrid}}}" Width="30" Height="30" Background="Transparent" BorderBrush="Transparent">
@@ -66,6 +98,9 @@
                                 </StackPanel>
                             </Button>
 
+                            <!--
+                            Vytvoření tlačítka pro kategorii zábava.
+                            -->
                             <Button Name="Fun" Command="{Binding DataContext.setCategory,       
                                 RelativeSource= {RelativeSource FindAncestor,
                                 AncestorType={x:Type DataGrid}}}" Width="30" Height="30" Background="Transparent" BorderBrush="Transparent">
@@ -80,6 +115,9 @@
                                 </StackPanel>
                             </Button>
 
+                            <!--
+                            Vytvoření tlačítka pro kategorii jiné.
+                            -->
                             <Button Name="Other" Command="{Binding DataContext.setCategory,       
                                 RelativeSource= {RelativeSource FindAncestor,
                                 AncestorType={x:Type DataGrid}}}" Width="30" Height="30" Background="Transparent" BorderBrush="Transparent">
@@ -99,10 +137,20 @@
                 </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
 
+            <!--
+            Definování sloupce s hlavičkkou podíl času (%). Binding na percenTimeInApp zajistí zobrazení procentuální zastoupení v aplikace v čase.
+            -->
             <DataGridTextColumn Header="Podíl času (%)" Width="*" Binding="{Binding percenTimeInApp, StringFormat={}{0}%}" HeaderStyle="{StaticResource CenterGridHeaderStyle}" CellStyle="{StaticResource DataGridCellCenter}" FontSize="13"/>
 
+            <!--
+            Definování sloupce s hlavičkkou strávený čas. Binding na timeInApp zajistí zobrazení času běhu aplikace.
+            -->
             <DataGridTextColumn Header="Strávený čas" Width="*" Binding="{Binding timeInApp}" HeaderStyle="{StaticResource CenterGridHeaderStyle}" CellStyle="{StaticResource DataGridCellCenter}" FontSize="13"/>
 
+            <!--
+            Poslední sloupec bez hlavičky.
+            Obsahuje tlačítko, které zajišťuje smazání daného záznamu.
+            -->
             <DataGridTemplateColumn HeaderStyle="{StaticResource RightGridHeaderStyle}" CellStyle="{StaticResource DataGridCellRight}">
                 <DataGridTemplateColumn.CellTemplate>
                     <DataTemplate>
